--- a/tictactoe-server/pom.xml
+++ b/tictactoe-server/pom.xml
@@ -14,6 +14,11 @@
     </properties>
 
     <dependencies>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>1.7.30</version>
+	</dependency>
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-core</artifactId>
@@ -35,22 +40,27 @@
 
     <build>
     <plugins>
-      <!-- any other plugins -->
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <executions>
           <execution>
             <phase>package</phase>
             <goals>
-              <goal>single</goal>
+              <goal>attached</goal>
             </goals>
+	    <configuration>
+	      <finalName>TP</finalName>
+              <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+              </descriptorRefs>
+	      <archive>
+	        <manifest>
+	          <mainClass>TP.RestfulServer</mainClass>
+	        </manifest>
+	      </archive>
+            </configuration>
           </execution>
-        </executions>
-        <configuration>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-        </configuration>
+	</executions>
       </plugin>
     </plugins>
   </build>
