--- a/tictactoe-client/pom.xml
+++ b/tictactoe-client/pom.xml
@@ -55,8 +55,11 @@
             <descriptorRefs>
               <descriptorRef>jar-with-dependencies</descriptorRef>
             </descriptorRefs>
-
-
+            <archive>
+              <manifest>
+                <mainClass>TP.Game</mainClass>
+              </manifest>
+            </archive>
           </configuration>
         </execution>
 </executions>
