--- a/tictactoe-server/Dockerfile
+++ b/tictactoe-server/Dockerfile
@@ -11,4 +11,4 @@ RUN ["mvn", "clean"]
 RUN ["mvn", "package"]
 
 EXPOSE 8080
-CMD ["java", "-jar", "target/TP-jar-with-dependencies.jar"]
+ENTRYPOINT ["java", "-jar", "target/TP-jar-with-dependencies.jar"]
